Several fixes
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>