@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.enterprisedomain</groupId>
@@ -17,5 +18,18 @@
 		<module>tests</module>
 		<module>releng</module>
 	</modules>
-
+	<properties>
+		<surefire.moduleProperties></surefire.moduleProperties>
+	</properties>
+	<profiles>
+		<profile>
+			<id>jdk9-or-newer</id>
+			<activation>
+				<jdk>[9,)</jdk>
+			</activation>
+			<properties>
+				<surefire.moduleProperties>--add-modules=ALL-SYSTEM</surefire.moduleProperties>
+			</properties>
+		</profile>
+	</profiles>
 </project>
